# plumed2

./: .gitignore  configure  configure.ac
.github/workflows/: ci.yml
cuda_example_cvs/: md_input  md_potential
cuda_pytorch_config_test/: compile  test.x
cuda_pytorch_config_test/plumed/: create-plumed-model.py  cuda_cv_scripted.pt  deriv  histogram.data  stats.out  torch_cv.pt
cuda_pytorch_config_test/plumed_load/: TorchModel.cpp  TorchModelTest.cpp  bck.0.COLVAR  cuda_cv.pt  out_potential.data  out_potential.dim1.data  out_potential.dim2.data  potential-coeffs.out.data  torch_cv_scripted.pt
cuda_pytorch_test/: test.c
cuda_trizio/plumed_freeze/: YORCHHHH.py  create-plumed-model.py  cuda_cv_300_1.pt  deriv  derivatives_10_1.txt  derivatives_300_1.txt  md_input  test.cpp
cuda_trizio/plumed_simple_model/: COLVAR  cuda_cv_10_1.pt  cuda_cv_scripted.pt  stats.out  test.cpp
cuda_trizio/simple_equivariant_model/: CMakeLists.txt  cmake-app.cpp
cuda_trizio/simple_model/: compile  cuda_cv.pt  test.cpp
cuda_trizio/simple_nn/: OLDtest.cpp  YORCHHHH.py  create-plumed-model.py  cuda_cv.ptc  cuda_cv_4_1.pt  cuda_cv_4_2.pt  derivatives_4_1.txt  derivatives_4_2.txt  test.cpp
cuda_trizio/simple_nn/example-enrico-cuda/: create.py  model.ptc  model_checkpoint.pt
cuda_trizio/simple_tensor/: README.txt  test.c
src/pytorch/: COPYRIGHT  PytorchModel.cpp  PytorchModelCuda.cpp
